force-app/main/default/objects/Campaign/fields/Campaign_Stage__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Stage__c</fullName>
    <label>Campaign Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Creation</fullName>
                <default>true</default>
                <label>Creation</label>
            </value>
            <value>
                <fullName>Template Tagging</fullName>
            </value>
            <value>
                <fullName>Interaction Score</fullName>
            </value>
            <value>
                <fullName>Member Identification</fullName>
            </value>
            <value>
                <fullName>Email Template Selection</fullName>
            </value>
            <value>
                <fullName>Activated / In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Activate</fullName>
                <isActive>false</isActive>
                <label>Activate</label>
            </value>
            <value>
                <fullName>Campaign Member Creation</fullName>
                <isActive>false</isActive>
                <label>Campaign Member Creation</label>
            </value>
            <value>
                <fullName>Templates Mapping</fullName>
                <isActive>false</isActive>
                <label>Template Administration</label>
            </value>
            <value>
                <fullName>Weightage Stamping</fullName>
                <isActive>false</isActive>
                <label>Weightage Stamping</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>