force-app/main/default/objects/Campaign/fields/Count_Weightage_For_Duplicate_Clicks__c.field-meta.xml
<CustomField>
    <fullName>Count_Weightage_For_Duplicate_Clicks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Count Weightage For Duplicate Clicks?</label>
    <type>Checkbox</type>
</CustomField>