force-app/main/default/objects/Campaign/fields/Create_Opportunity_On_Open__c.field-meta.xml
<CustomField>
    <fullName>Create_Opportunity_On_Open__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Lead On Open</label>
    <type>Checkbox</type>
</CustomField>