force-app/main/default/objects/Campaign/fields/No_Of_Times_Activated__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Times_Activated__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. Of Times Activated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>