force-app/main/default/objects/Campaign/fields/Stage_of_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Stage_of_Campaign__c</fullName>
    <label>Stage of Campaign</label>
    <length>49</length>
    <type>Text</type>
</CustomField>