force-app/main/default/objects/Campaign/validationRules/Campaign_Should_be_in_creation_stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_Should_be_in_creation_stage</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; NOT(ISPICKVAL(Campaign_Stage__c, &apos;Creation&apos;))</errorConditionFormula>
    <errorMessage>Campaign should be in creation stage when creating the campaign</errorMessage>
</ValidationRule>