force-app/main/default/objects/Campaign/validationRules/Do_not_change_campaign_specific_details.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_change_campaign_specific_details</fullName>
    <active>true</active>
    <errorConditionFormula>No_Of_Times_Activated__c &gt; 0  &amp;&amp; (ISCHANGED(Count_Weightage_For_Duplicate_Clicks__c) || ISCHANGED(Create_Opportunity_On_Open__c))</errorConditionFormula>
    <errorDisplayField>Count_Weightage_For_Duplicate_Clicks__c</errorDisplayField>
    <errorMessage>You cannot change &quot;Count Weightage For Duplicate Clicks?&quot; once the campaign is activated</errorMessage>
</ValidationRule>